svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: grafana-central
    app.kubernetes.io/version: 10.1.5
  name: grafana
  namespace: observability
spec:
  type: ClusterIP
  ports:
  - name: http-web
    port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana-central
