ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.eks-own-01.dev.own-eks-dev.ct.fravega.com
    konghq.com/https-redirect-status-code: "308"
    konghq.com/protocols: https
  labels:
    app.kubernetes.io/name: grafana-central
    app.kubernetes.io/version: 10.1.5
  name: grafana
  namespace: observability
spec:
  ingressClassName: kong
  rules:
  - host: grafana.eks-own-01.dev.own-eks-dev.ct.fravega.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.eks-own-01.dev.own-eks-dev.ct.fravega.com
    secretName: cluster-dns
